--- a/assignments/05/style.css
+++ b/assignments/05/style.css
@@ -62,7 +62,10 @@ a:after {
 }
 
 ul {
-    margin-left: 40px;
+    margin-left: 0px;
+}
+ul >li {
+    padding-bottom: 5px;
 }
 
 /* Style top-level lists */
