--- a/assignments/05/style.css
+++ b/assignments/05/style.css
@@ -263,6 +263,9 @@ table.lecturetable td.llab:before {
 }
 
 /* source code */
+.sourceCode {
+    white-space: pre-wrap;
+}
 
 code.sourceCode {
     font-family: Monaco, monospace;
